--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New_Project</title>
+    <title>new_projects</title>
 </head>
 <body>
-    <h1>it's a new project</h1>
+    <h1>its my new projct</h1>
     
 </body>
 </html>
