--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new_projects</title>
+    <style>
+   
+    </style>
 </head>
 <body>
     <h1>its my new projct</h1>
-    <h3>hellow mama </h3>
+    <h3>hellow vailog ...</h3>
+    <d class="hl1"><img src="WIN_20220328_03_12_24_Pro.jpg" alt=""></d>
+    <d class="hl2"><img src="WIN_20220328_03_11_54_Pro.jpg" alt=""></d>
+
     
 </body>
 </html>
