--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <body>
     <h1>its my new projct</h1>
     <h3>hellow vailog ...</h3>
+    <dev>
+        <h4> new blog</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt cumque a corporis cum assumenda. Magnam culpa debitis reprehenderit aspernatur beatae non laudantium doloribus mollitia corporis ex eveniet reiciendis earum a ullam cum exercitationem, veniam sit saepe voluptate aliquam temporibus in!
+        </p>
+    </dev>
     <d class="hl1"><img src="WIN_20220328_03_12_24_Pro.jpg" alt=""></d>
     <d class="hl2"><img src="WIN_20220328_03_11_54_Pro.jpg" alt=""></d>
 
